force-app/main/default/objects/Event/fields/FOPS_Consultant__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Consultant__c</fullName>
    <label>Consultant Attending</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviews Attended</relationshipLabel>
    <relationshipName>FOPS_InterviewsAttended</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>