force-app/main/default/objects/Event/fields/FOPS_Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Feedback_Date__c</fullName>
    <label>Feedback Date</label>
    <type>Date</type>
</CustomField>