force-app/main/default/objects/Event/fields/FOPS_Feedback_Received__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Feedback_Received__c</fullName>
    <label>Feedback Received</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>