force-app/main/default/objects/Event/fields/FOPS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Opportunity__c</fullName>
    <label>Pursuit</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>FOPS_Interviews</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>