force-app/main/default/objects/Event/fields/FOPS_Round_Number__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Round_Number__c</fullName>
    <label>Round Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>