force-app/main/default/objects/Event/recordTypes/Client_Final.recordType-meta.xml
<RecordType>
    <fullName>Client_Final</fullName>
    <active>true</active>
    <label>Client/Final</label>
</RecordType>