force-app/main/default/objects/Event/recordTypes/Recruiter_Screen.recordType-meta.xml
<RecordType>
    <fullName>Recruiter_Screen</fullName>
    <active>true</active>
    <label>Recruiter Screen</label>
</RecordType>