force-app/main/default/objects/Event/recordTypes/Technical.recordType-meta.xml
<RecordType>
    <fullName>Technical</fullName>
    <active>true</active>
    <label>Technical</label>
</RecordType>